# mlops03

./: Makefile  README.md  pyproject.toml
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_git03/: __init__.py
